--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,49 @@
 site_name: Recce Documentation
+
+extra_css:
+  - styles/extra.css
+
+nav:
+  - index.md
+  - installation.md
+  - getting-started.md
+
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+
 theme:
   name: material
+  logo: assets/images/recce-logo-white.png
+  palette:
+    # Palette toggle for automatic mode
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/brightness-auto
+        name: Switch to light mode
+    # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default 
+      primary: deep orange
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: deep orange
+      toggle:
+        icon: material/brightness-4
+        name: Switch to system preference   
+
+  features:
+    - navigation.instant
+    - navigation.instant.progress
+    - navigation.sections
+    - content.code.copy
+
