--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ nav:
   - docs/index.md
   - docs/installation.md
   - docs/get-started.md
+  - docs/demo.md
   - Features:
     - docs/features/lineage-diff.md
     - docs/features/schema-diff.md
@@ -32,6 +33,8 @@ markdown_extensions:
   - pymdownx.inlinehilite
   - pymdownx.snippets
   - pymdownx.superfences
+  - attr_list
+  - md_in_html
 
 theme:
   name: material
@@ -67,6 +70,7 @@ theme:
 
 plugins:
   - search
+  - glightbox
 
 watch:
   - material
