--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Recce Documentation
+site_name: Recce
 site_description: >-
   Data change validation for dbt projects - 
   Create 'all signal, no noise' pull request comments
@@ -6,9 +6,7 @@ site_description: >-
 # Repository
 repo_name: datarecce/recce
 repo_url: https://github.com/datarecce/recce
-
 site_url: https://datarecce.io
-
 extra_css:
   - styles/extra.css
 
@@ -16,26 +14,42 @@ extra:
   analytics:
     provider: google
     property: G-E06MSTE2SX
-
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/DataRecce/recce
+    - icon: fontawesome/brands/slack
+      link: https://getdbt.slack.com/archives/C05C28V7CPP      
+    - icon: fontawesome/brands/x-twitter
+      link: https://x.com/datarecce
+    - icon: fontawesome/brands/linkedin
+      link: https://www.linkedin.com/company/datarecce
+    - icon: fontawesome/brands/mastodon 
+      link: https://mastodon.social/@DataRecce
 nav:
   - index.md
-  - blog/index.md
-  - docs/index.md
-  - docs/installation.md
-  - docs/get-started.md
-  - docs/demo.md
-  - Features:
-    - docs/features/checklist.md
-    - docs/features/histogram-diff.md
-    - docs/features/lineage-diff.md
-    - docs/features/profile-diff.md
-    - docs/features/query-diff.md
-    - docs/features/row-count-diff.md
-    - docs/features/schema-diff.md
-    - docs/features/top-k-diff.md
-    - docs/features/value-diff.md
+  - Overview:
+    - docs/index.md
+    - docs/demo.md
+  
+  - Guides:
+    - Getting Started:
+      - docs/get-started.md
+      - docs/installation.md  
+    - Lineage:
+      - docs/features/lineage-diff.md
+      - docs/features/row-count-diff.md
+      - docs/features/schema-diff.md      
+      - docs/features/value-diff.md      
+      - docs/features/profile-diff.md
+      - docs/features/top-k-diff.md
+      - docs/features/histogram-diff.md
+              
+    - Query:
+      - docs/features/query-diff.md        
+    - Checklist:
+      - docs/features/checklist.md
     
-
+  - Blog: 'https://medium.com/inthepipeline'
   #- Recce Blog:
     #- blog/index.md
 
@@ -80,9 +94,9 @@ theme:
   features:
     # - navigation.instant
     # - navigation.instant.progress
-    # - navigation.tabs
+    - navigation.tabs
     - navigation.sections
-    - content.code.copy
+    - content.code.copy  
 
 plugins:
   - search
