Add configuration page
Signed-off-by: popcorny <celu@infuseai.io>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,7 @@ nav:
       - Advanced Features:
           - docs/features/state-file.md
           - docs/features/preset-checks.md
+          - docs/reference/configuration.md
       - Scenarios:
           - docs/guides/scenario-dev.md
           - docs/guides/scenario-pr-review.md
