--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,9 @@ nav:
           - docs/guides/scenario-dev.md
           - docs/guides/scenario-pr-review.md
           - docs/guides/scenario-ci.md
+      - Architecture:
+          - docs/architecture/overview.md
+
 
   - Blog: "https://medium.com/inthepipeline"
   #- Recce Blog:
@@ -71,7 +74,11 @@ markdown_extensions:
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
         #- toc:
         #   title: On this page
-
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
 
 theme:
   name: material
