--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,8 @@ extra:
       link: https://github.com/DataRecce/recce
     - icon: fontawesome/brands/slack
       link: https://getdbt.slack.com/archives/C05C28V7CPP
+    - icon: fontawesome/brands/discord
+      link: https://discord.gg/HUUx9fyphJ
     - icon: fontawesome/brands/x-twitter
       link: https://x.com/datarecce
     - icon: fontawesome/brands/linkedin
