Add doc for env prep
Signed-off-by: popcorny <celu@infuseai.io>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,7 @@ nav:
           - docs/guides/scenario-dev.md
           - docs/guides/scenario-pr-review.md
           - docs/guides/scenario-ci.md
+          - docs/guides/best-practices-prep-env.md
       - Architecture:
           - docs/architecture/overview.md
 
