--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,9 +61,9 @@ nav:
   - Cloud (Beta):
       - docs/recce-cloud/index.md
       - docs/recce-cloud/getting-started-recce-cloud.md
-      - docs/recce-cloud/setup-gh-actions-cd.md
-      - docs/recce-cloud/setup-gh-actions-ci.md
-      - docs/recce-cloud/setup-gh-codespaces.md
+      # - docs/recce-cloud/setup-gh-actions-cd.md
+      # - docs/recce-cloud/setup-gh-actions-ci.md
+      # - docs/recce-cloud/setup-gh-codespaces.md
   - Blog: "https://medium.com/inthepipeline"
   #- Recce Blog:
   #- blog/index.md
