--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,6 +65,7 @@ nav:
       - docs/recce-cloud/getting-started-recce-cloud.md
       - docs/recce-cloud/setup-gh-actions.md      
       - docs/recce-cloud/setup-gh-codespaces.md
+      - docs/recce-cloud/expose-recce-instance-visibility.md
       - Cloud Architecture:
         # - docs/recce-cloud/architecture/index.md
         - docs/recce-cloud/architecture/security.md
