--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,6 +55,7 @@ nav:
           - docs/features/state-file.md
           - docs/features/preset-checks.md
           - docs/features/node-selection.md
+          - docs/features/breaking-change-analysis.md
           - docs/reference/configuration.md
       - Scenarios:
           - docs/guides/scenario-dev.md
@@ -103,6 +104,8 @@ markdown_extensions:
         - name: mermaid
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.tabbed:
+      alternate_style: true          
 
 theme:
   name: material
