default light theme

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -115,25 +115,18 @@ theme:
   custom_dir: material/overrides
   logo: assets/images/recce-logo-white.png
   palette:
-    # Palette toggle for automatic mode
-    - media: "(prefers-color-scheme)"
-      toggle:
-        icon: material/brightness-auto
-        name: Switch to light mode
     # Palette toggle for light mode
-    - media: "(prefers-color-scheme: light)"
-      scheme: default
+    - scheme: default
       primary: deep orange
       toggle:
-        icon: material/brightness-7
+        icon: material/brightness-4 # Icon to switch to dark mode
         name: Switch to dark mode
     # Palette toggle for dark mode
-    - media: "(prefers-color-scheme: dark)"
-      scheme: slate
+    - scheme: slate
       primary: deep orange
       toggle:
-        icon: material/brightness-4
-        name: Switch to system preference
+        icon: material/brightness-7 # Icon to switch back to light mode
+        name: Switch to light mode
 
   features:
     # - navigation.instant
